--- a/agro-server/src/main/resources/application.properties
+++ b/agro-server/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
 # database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/agromarket-db
+spring.datasource.url=jdbc:mysql://localhost:3306/agromarket-db?serverTimezone=Asia/Ho_Chi_Minh
 spring.datasource.username=root
 spring.datasource.password=1234567890
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
