--- a/agro-server/src/main/resources/application.properties
+++ b/agro-server/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/agromarket-db?serverTimezone=A
 spring.datasource.username=root
 spring.datasource.password=1234567890
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=agromarket190125@gmail.com
+spring.mail.password=qfyx stfl xoga ywwq
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
