--- a/agro-server/src/main/resources/application.properties
+++ b/agro-server/src/main/resources/application.properties
@@ -17,3 +17,12 @@ spring.mail.username=agromarket190125@gmail.com
 spring.mail.password=qfyx stfl xoga ywwq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+#vnpay
+vnpay.pay-url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.return-url=http://localhost:8081/api/v1/auth/payment/vnpay-callback
+vnpay.tmn-code=40C3VOI2
+vnpay.secret-key=L53FYUVS0YLE9JMFYESLE3CDRUZI5LCN
+vnpay.api-url=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
+vnpay.version=2.1.0
+vnpay.command=pay
+vnpay.order-type=other
