--- a/agro-server/pom.xml
+++ b/agro-server/pom.xml
@@ -114,6 +114,13 @@
             <version>3.2.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.39.0</version>
+        </dependency>
+
 
     </dependencies>
 
