--- a/agro-server/src/main/resources/application.properties
+++ b/agro-server/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.show-sql=false
 # database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/agromarket-db?serverTimezone=Asia/Ho_Chi_Minh
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=1234567890
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #mail
 spring.mail.host=smtp.gmail.com
