--- a/agro-client/package.json
+++ b/agro-client/package.json
@@ -14,12 +14,16 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.25",
     "expo-status-bar": "~2.0.1",
     "iconsax-react-native": "^0.0.8",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-flash-message": "^0.4.2",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13"
   },
