--- a/agro-client/package.json
+++ b/agro-client/package.json
@@ -18,17 +18,21 @@
     "axios": "^1.7.9",
     "expo": "~52.0.25",
     "expo-image-picker": "^16.0.6",
+    "expo-modules-core": "~2.2.2",
     "expo-status-bar": "~2.0.1",
     "iconsax-react-native": "^0.0.8",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-date-picker": "^5.0.10",
     "react-native-flash-message": "^0.4.2",
     "react-native-image-picker": "^8.1.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-mime-types": "^2.5.0",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.13.1",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.1",
-    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13"
   },
   "devDependencies": {
